# cpastone

UR3e-ROS2-resources/: README.md  ur3e_ros2_drivers.repos
UR3e-ROS2-resources/install/: local_setup.sh  setup.sh
UR3e-ROS2-resources/install/cartesian_waypoint_execution/lib/cartesian_waypoint_execution/: waypoints
UR3e-ROS2-resources/install/cartesian_waypoint_execution/share/cartesian_waypoint_execution/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
UR3e-ROS2-resources/install/moveit_tools/lib/moveit_tools/: add_collision_ground_plane
UR3e-ROS2-resources/install/moveit_tools/share/moveit_tools/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  (+4 more)
UR3e-ROS2-resources/log/: latest_build
UR3e-ROS2-resources/src/moveit_tools/: CMakeLists.txt
UR3e-ROS2-resources/src/teleop/config/: ur3e_servo_config.yaml
UR3e-ROS2-resources/src/vr_connector/bags/: metadata.yaml  rosbag2_2022_04_22-12_39_18_0.db3
capstone_code/: README.md
capstone_code/ros1_ws/devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
capstone_code/ros1_ws/src/custom_msgs/: CMakeLists.txt  package.xml
capstone_code/ros1_ws/src/talker/: CMakeLists.txt  package.xml
capstone_code/ros2_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
capstone_code/ros2_ws/log/: latest_build  latest_list
capstone_code/ros2_ws/src/custom_msgs/: CMakeLists.txt  package.xml
capstone_code/ros2_ws/src/talker/: CMakeLists.txt  package.xml
(+814 files in other folders)
